# Dino-Rush

./: .gitignore  CMakeLists.txt  README.md
lua/: Animation.lua  AnimationController.lua  FloorBackground.lua  Save.lua  Sound.lua  StaticBackground.lua  annotations.lua  game.lua
src/: Game.aps  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h
src/MyClasses/: LuaBinder.cpp  LuaBinder.h
